@@ -1,3 +1,12 @@
+2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* device/lib/z80/crt0.s,
+	  device/lib/z180/crt0.s,
+	  device/lib/r3ka/crt0.s,
+	  device/lib/r2k/crt0.s,
+	  device/lib/gbz80/crt0.s:
+	  Fix bug #2153.
+
 2013-12-18 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCast.c (stringToSymbol, createIf): fixed bug 2163
